spacing fixed

--- a/lms/static/sass/discussion/lms-discussion-main.scss
+++ b/lms/static/sass/discussion/lms-discussion-main.scss
@@ -152,20 +152,23 @@ body.new-theme {
             padding-left: 0;
           }
 
+          .page-content{
+            padding-top: 68px;
+          }
           .page-header {
             .page-header-main {
 
               left: 0px;
-              top: 0px;
+              top: 26px;
             }
 
             .page-header-secondary {
               width: 100%;
               position: relative;
-              top: 35px;
+              top: 65px;
 
               h1 {
-                display: none;
+                top: -75px;
               }
 
               .form-actions {
@@ -616,7 +619,7 @@ body.new-theme {
       }
 
       .page-content {
-        padding-top: 50px;
+        padding-top: 30px;
       }
 
       .post-label {
@@ -1125,7 +1128,6 @@ body.new-theme {
             input[type='radio'] {
               width: auto;
               height: auto;
-              margin-top: 5px;
 
             }
 
@@ -1635,25 +1637,6 @@ body.new-theme {
 
           .post-extended-content {
             .response-btn-count-wrapper {
-              .add-response {
-                display: inline-block !important;
-                .btn {
-                  background: none;
-                  color: $black;
-                  border: 0;
-                  font-size: 1rem;
-                  padding: 0;
-                  text-transform: initial;
-                  height: auto !important;
-                  &:hover{
-                    background: none !important;
-                    color: $black !important;
-                    font-size: 1rem !important;
-                    text-transform: initial !important;
-                    padding: 0 !important;
-                  }
-                }
-              }
 
               .response-count {
                 display: none;
@@ -1824,7 +1807,6 @@ body.new-theme {
 
             .discussion-reply-new {
               .add-response {
-                display: inline-block !important;
                 padding: 0 0px;
                 margin-top: 0px;
               }
